--- a/d&d.html
+++ b/d&d.html
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/s">free bootstrap theme</a></section><section class="header12 cid-qqTJZtqX6H mbr-fullscreen mbr-parallax-background" id="header12-1m">
+<section class="engine"><a href="https://mobirise.me/g">how to build a website</a></section><section class="header12 cid-qqTJZtqX6H mbr-fullscreen mbr-parallax-background" id="header12-1m">
 
     
 
@@ -77,7 +77,7 @@
                     <div class="icons-media-container mbr-white">
                         <div class="card col-12 col-md-6 col-lg-3">
                             
-                            <h5 class="mbr-fonts-style display-5"><a href="http://campaigns.chiriaco.net" target="_blank">Campaigns.Chiriaco.net</a><strong></strong></h5>
+                            <h5 class="mbr-fonts-style display-5"><a href="http://campaigns.chiriaco.net" target="_blank">Campaigns.</a><strong></strong></h5>
                         </div>
 
                         <div class="card col-12 col-md-6 col-lg-3">
@@ -115,10 +115,8 @@
     <div class="container">
         <div class="media-container-row title">
             <div class="col-12 col-md-8">
-                <div class="mbr-section-btn align-center">
-                    <a class="btn btn-primary display-4" href="books\PH.pdf" target="_blank">Players Handbook</a>
-                    <a class="btn btn-primary display-4" href="books\DMG.pdf" target="_blank">Dungeon Masters Guide</a> <a class="btn btn-primary display-4" href="books\UA.pdf" target="_blank">Unearthed Arcana</a> <a class="btn btn-primary display-4" href="books\MM.pdf" target="_blank">Monster Manual</a> <a class="btn btn-primary display-4" href="books\MMII.pdf" target="_blank">Monster Manual II</a> <a class="btn btn-primary display-4" href="books\FF.pdf" target="_blank">Fiend Folio</a> <a class="btn btn-primary display-4" href="books\dsg.pdf" target="_blank">Dungeoneers Survival Guide</a> <a class="btn btn-primary display-4" href="books\wsg.pdf" target="_blank">Wilderness Survival Guide</a>  <a class="btn btn-primary display-4" href="books\dd.pdf" target="_blank">Deities and Demigods</a> <a class="btn btn-primary display-4" href="books\LL.pdf" target="_blank">Legends &amp; Lore</a> <a class="btn btn-primary display-4" href="books\mp.pdf" target="_blank">Manual of the Planes</a> <a class="btn btn-primary display-4" href="books\oa.pdf" target="_blank">Oriental Adventures</a> <a class="btn btn-primary display-4" href="books\rg.pdf" target="_blank">Rogues Gallery</a> 
-                </div>
+                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://s3-us-west-1.amazonaws.com/rpgpdf.angelochiriaco.com/AdvancedDungeonsandDragons/PH.pdf" target="_blank">Players Handbook</a>
+                    <a class="btn btn-primary display-4" href="https://s3-us-west-1.amazonaws.com/rpgpdf.angelochiriaco.com/AdvancedDungeonsandDragons/DMG.pdf" target="_blank">Dungeon Masters Guide</a> <a class="btn btn-primary display-4" href="https://s3-us-west-1.amazonaws.com/rpgpdf.angelochiriaco.com/AdvancedDungeonsandDragons/UA.pdf" target="_blank">Unearthed Arcana</a> <a class="btn btn-primary display-4" href="https://s3-us-west-1.amazonaws.com/rpgpdf.angelochiriaco.com/AdvancedDungeonsandDragons/MM.pdf" target="_blank">Monster Manual</a> <a class="btn btn-primary display-4" href="https://s3-us-west-1.amazonaws.com/rpgpdf.angelochiriaco.com/AdvancedDungeonsandDragons/MMII.pdf" target="_blank">Monster Manual II</a> <a class="btn btn-primary display-4" href="https://s3-us-west-1.amazonaws.com/rpgpdf.angelochiriaco.com/AdvancedDungeonsandDragons/FF.pdf" target="_blank">Fiend Folio</a> <a class="btn btn-primary display-4" href="https://s3-us-west-1.amazonaws.com/rpgpdf.angelochiriaco.com/AdvancedDungeonsandDragons/dsg.pdf" target="_blank">Dungeoneers Survival Guide</a> <a class="btn btn-primary display-4" href="https://s3-us-west-1.amazonaws.com/rpgpdf.angelochiriaco.com/AdvancedDungeonsandDragons/wsg.pdf" target="_blank">Wilderness Survival Guide</a>  <a class="btn btn-primary display-4" href="https://s3-us-west-1.amazonaws.com/rpgpdf.angelochiriaco.com/AdvancedDungeonsandDragons/dd.pdf" target="_blank">Deities and Demigods</a> <a class="btn btn-primary display-4" href="https://s3-us-west-1.amazonaws.com/rpgpdf.angelochiriaco.com/AdvancedDungeonsandDragons/LL.pdf" target="_blank">Legends &amp; Lore</a> <a class="btn btn-primary display-4" href="https://s3-us-west-1.amazonaws.com/rpgpdf.angelochiriaco.com/AdvancedDungeonsandDragons/mp.pdf" target="_blank">Manual of the Planes</a> <a class="btn btn-primary display-4" href="https://s3-us-west-1.amazonaws.com/rpgpdf.angelochiriaco.com/AdvancedDungeonsandDragons/oa.pdf" target="_blank">Oriental Adventures</a> <a class="btn btn-primary display-4" href="https://s3-us-west-1.amazonaws.com/rpgpdf.angelochiriaco.com/AdvancedDungeonsandDragons/rg.pdf" target="_blank">Rogues Gallery</a></div>
             </div>
         </div>
     </div>
