--- a/d&d.html
+++ b/d&d.html
@@ -22,6 +22,20 @@
   
 </head>
 <body>
+
+<!-- Google Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-120897103-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-120897103-1');
+</script>
+<!-- /Google Analytics -->
+
+
   <section class="menu cid-qqTjay3ODr" once="menu" id="menu2-1j">
 
     
@@ -59,7 +73,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/g">how to build a website</a></section><section class="header12 cid-qqTJZtqX6H mbr-fullscreen mbr-parallax-background" id="header12-1m">
+<section class="engine"><a href="https://mobirise.me/w">html5 templates</a></section><section class="header12 cid-qqTJZtqX6H mbr-fullscreen mbr-parallax-background" id="header12-1m">
 
     
 
