New google code
Updated google code

--- a/d&d.html
+++ b/d&d.html
@@ -25,13 +25,13 @@
 
 <!-- Google Analytics -->
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-120897103-1"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-120960529-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'UA-120897103-1');
+  gtag('config', 'UA-120960529-1');
 </script>
 <!-- /Google Analytics -->
 
@@ -73,7 +73,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/w">html5 templates</a></section><section class="header12 cid-qqTJZtqX6H mbr-fullscreen mbr-parallax-background" id="header12-1m">
+<section class="engine"><a href="https://mobirise.me/f">simple web maker</a></section><section class="header12 cid-qqTJZtqX6H mbr-fullscreen mbr-parallax-background" id="header12-1m">
 
     
 
