--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
 
 <!-- Google Analytics -->
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-120897103-1"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-120960529-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'UA-120897103-1');
+  gtag('config', 'UA-120960529-1');
 </script>
 <!-- /Google Analytics -->
 
@@ -74,7 +74,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/p">site templates free download</a></section><section class="header5 cid-qqSt8iE14y mbr-fullscreen mbr-parallax-background" id="header5-10">
+<section class="engine"><a href="https://mobirise.me/y">html web templates</a></section><section class="header5 cid-qqSt8iE14y mbr-fullscreen mbr-parallax-background" id="header5-10">
 
     
 
