added resume page
Added Resume page and removed buttons from home page

--- a/Egypt.html
+++ b/Egypt.html
@@ -60,7 +60,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.me/l">free web templates</a></section><section class="cid-qr1k7i3ksg" id="image2-1x">
+<section class="engine"><a href="https://mobirise.me/n">landing page templates</a></section><section class="cid-qr1k7i3ksg" id="image2-1x">
 
     
 
